# silentguard

./: .dockerignore  .gitignore  CLAUDE.md  DATASETS.md  NOVELTY.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
deploy/: Dockerfile  requirements-deploy.txt
deploy/hf-space/: README.md
docs/: DEPLOY.md  ICU_Alarm_Project_Roadmap.md  ICU_Project_TitlePage.docx  PROJECT_LOG.md  RESULTS.md
notebooks/: README.md
paper/: outline.md
scripts/: 01_explore_record.py  02_train_baseline.py  03_generalization.py  04_deep_model.py  05_freeze_ensemble.py  check_ts_parity.mjs  deploy_hf_space.sh  download_data.sh  make_figures.py
service/: Dockerfile  README.md  engine.py  main.py
service/static/: index.html
src/silentguard/: __init__.py  config.py
src/silentguard/data/: __init__.py  io.py  labels.py
src/silentguard/evaluation/: __init__.py  metrics.py
src/silentguard/explain/: __init__.py  explain.py  saliency.py
src/silentguard/features/: __init__.py  sqi.py  waveform_features.py
src/silentguard/models/: __init__.py  baseline.py  cnn.py  domain.py  safety.py  (+1 more)
tests/: test_service.py  test_smoke.py
web/: .env.example  .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
web/components/: ECGCanvas.tsx  Explainer.tsx  HeadlineStats.tsx  Hero.tsx  LangToggle.tsx  LiveMonitor.tsx  Nav.tsx  PageHeader.tsx  PerfToggle.tsx  Results.tsx  motion.tsx  perf.tsx  sound.tsx
web/lib/: api.ts  i18n.tsx  safety.ts
(+26 files in other folders)
