[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silentguard"
version = "0.0.1"
description = "ICU false-alarm reduction: cross-dataset, safety-constrained, explainable."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
